# TroughSimMCRT

./: .gitignore  CMakeLists.txt  CUDA_MCRT_energy_absorbed_filtered.csv  CUDA_MCRT_energy_absorbed_filtered_noGlass.csv  CUDA_MCRT_energy_absorbed_origin.csv  Direct_MCRT_Simulation.cu  Direct_MCRT_Simulation.out  Makefile  README.md  README_CN.md  SF_mcrt_CPC.cuh  TMS.cuh  bezier.cuh  cyli_reflectors.cu  cyli_reflectors.cuh  error.cuh  paint_energy_distribution.py  reflector.cuh  run.sh  sample_vMF.cuh  sun_shape.cu  sun_shape.cuh  vector.cuh
include/: app.cuh  cu_math.cuh  gaussian_filter.cuh
include/config/: absorber_config.cuh  sim_config.cuh  sun_config.cuh  trough_config.cuh
include/geometry/: absorber_intersect.cuh  geometry_func.cuh  trough_intersect.cuh
include/optics/: random_pools.cuh  sun_shape.cuh  surface_error.cuh
include/postprocess/: gaussian_filter.cuh
resources/: 738_sundir_year.txt  CSR-5.csv  config.json
resources/Nevada_Solar_One/: config.json
scripts/: annual_sim.py  find_optimal_focal.py  flux_map.csv  paint_energy_distribution.py  scan_focal_length.py  scan_intercept.py  scan_torsion.py
src/: absorber_config.cu  main.cu  random_pools.cu  sim_config.cu  sun_config.cu  trough_config.cu
